// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Status /> interactions should hide check if check.value is zero 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <div>
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_TIME Icon"
                  src="/assets/default/timerIconGreen.svg"
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session"
                  maxValue={10800}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#1AAA55",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={0}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      3TIME_HOUR_ABBR
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                0 USAGE_USED_OF 3TIME_HOUR_ABBR
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="WiFi Login Successful!"
          >
            WiFi Login Successful!
          </p>
          <p
            className="status-content"
            key="        You can now use the internet."
          >
                    You can now use the internet.
          </p>
          <p
            className="status-content"
            key="        You may leave this page open in case you want to log out."
          >
                    You may leave this page open in case you want to log out.
          </p>
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions should not display STATUS_CONTENT and radius usage when logged in internetMode 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/{orgSlug}/change-password/"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions should show user's radius usage 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <div>
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_TIME Icon"
                  src="/assets/default/timerIconGreen.svg"
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session"
                  maxValue={10800}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#1AAA55",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={0}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      3TIME_HOUR_ABBR
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                0 USAGE_USED_OF 3TIME_HOUR_ABBR
              </div>
            </div>
          </div>
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session-Traffic"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_DATA Icon"
                  src="/assets/default/dataIconGreen.svg"
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session-Traffic"
                  maxValue={3000000000}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#1AAA55",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={0}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      3 GB
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                0 USAGE_USED_OF 3 GB
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="WiFi Login Successful!"
          >
            WiFi Login Successful!
          </p>
          <p
            className="status-content"
            key="        You can now use the internet."
          >
                    You can now use the internet.
          </p>
          <p
            className="status-content"
            key="        You may leave this page open in case you want to log out."
          >
                    You may leave this page open in case you want to log out.
          </p>
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should hide checks and show upgrade option if all checks have zero value 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT
         
        Premium
      </h3>
      <div>
        <div
          className="usage-checks-container"
        />
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p>
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is exhausted 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT
         
        Premium
      </h3>
      <div>
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_TIME Icon"
                  src="/assets/default/timerIconRed.svg"
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session"
                  maxValue={10800}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={10700}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      1TIME_MINUTE_ABBR
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR USAGE_USED_OF 3TIME_HOUR_ABBR
              </div>
            </div>
          </div>
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session-Traffic"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_DATA Icon"
                  src="/assets/default/dataIconRed.svg"
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session-Traffic"
                  maxValue={3000000000}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={3000000000}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      0
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                3 GB USAGE_USED_OF 3 GB
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p>
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is exhausted 2`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <InfoModal
      active={true}
      content={
        <div
          className="plans "
        >
          <p
            className="intro"
          >
            Please select the preferred subscription plan
            .
          </p>
          <div
            className="plan"
          >
            <input
              id="radio0"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="0"
              type="radio"
              value="0"
            />
            <label
              htmlFor="radio0"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €1.99 per month 
              </span>
            </label>
          </div>
          <div
            className="plan"
          >
            <input
              id="radio1"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="1"
              type="radio"
              value="1"
            />
            <label
              htmlFor="radio1"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €9.99 per year 
              </span>
            </label>
          </div>
        </div>
      }
      handleResponse={[Function]}
      id="upgrade-plan-modal"
      isConfirmationDialog={false}
      isScrollable={true}
      toggleModal={[Function]}
    />
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT
         
        Premium
      </h3>
      <div>
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_TIME Icon"
                  src="/assets/default/timerIconRed.svg"
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session"
                  maxValue={10800}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={10700}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      1TIME_MINUTE_ABBR
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR USAGE_USED_OF 3TIME_HOUR_ABBR
              </div>
            </div>
          </div>
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session-Traffic"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_DATA Icon"
                  src="/assets/default/dataIconRed.svg"
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session-Traffic"
                  maxValue={3000000000}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={3000000000}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      0
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                3 GB USAGE_USED_OF 3 GB
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p>
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is free 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT
         
        Free
      </h3>
      <div>
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_TIME Icon"
                  src="/assets/default/timerIconRed.svg"
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session"
                  maxValue={10800}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={10700}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      1TIME_MINUTE_ABBR
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR USAGE_USED_OF 3TIME_HOUR_ABBR
              </div>
            </div>
          </div>
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session-Traffic"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_DATA Icon"
                  src="/assets/default/dataIconRed.svg"
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session-Traffic"
                  maxValue={3000000000}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={3000000000}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      0
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                3 GB USAGE_USED_OF 3 GB
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p>
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions subscriptions: should show upgrade option when user plan is free 2`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <InfoModal
      active={true}
      content={
        <div
          className="plans "
        >
          <p
            className="intro"
          >
            Please select the preferred subscription plan
            .
          </p>
          <div
            className="plan"
          >
            <input
              id="radio0"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="0"
              type="radio"
              value="0"
            />
            <label
              htmlFor="radio0"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €1.99 per month 
              </span>
            </label>
          </div>
          <div
            className="plan"
          >
            <input
              id="radio1"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="1"
              type="radio"
              value="1"
            />
            <label
              htmlFor="radio1"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €9.99 per year 
              </span>
            </label>
          </div>
        </div>
      }
      handleResponse={[Function]}
      id="upgrade-plan-modal"
      isConfirmationDialog={false}
      isScrollable={true}
      toggleModal={[Function]}
    />
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <h3>
        CURRENT_SUBSCRIPTION_TXT
         
        Free
      </h3>
      <div>
        <div
          className="usage-checks-container"
        >
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_TIME Icon"
                  src="/assets/default/timerIconRed.svg"
                />
                <div>
                  USAGE_TIME
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session"
                  maxValue={10800}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={10700}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      1TIME_MINUTE_ABBR
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                2TIME_HOUR_ABBR 58TIME_MINUTE_ABBR USAGE_USED_OF 3TIME_HOUR_ABBR
              </div>
            </div>
          </div>
          <div
            className="usage-box usage-box-inner"
            key="Max-Daily-Session-Traffic"
          >
            <div
              className="usage-check-content"
            >
              <div
                className="usage-check-header"
              >
                <img
                  alt="USAGE_DATA Icon"
                  src="/assets/default/dataIconRed.svg"
                />
                <div>
                  USAGE_DATA
                </div>
              </div>
              <div
                className="usage-progress-wrapper"
              >
                <CircularProgressbarWithChildren
                  id="Max-Daily-Session-Traffic"
                  maxValue={3000000000}
                  strokeWidth={12}
                  styles={
                    {
                      "background": {},
                      "path": {
                        "stroke": "#DB3B21",
                        "strokeLinecap": "butt",
                        "transitionDuration": "0.5s",
                      },
                      "root": {},
                      "text": {},
                      "trail": {
                        "stroke": "#EAECF0",
                        "strokeLinecap": "butt",
                      },
                    }
                  }
                  value={3000000000}
                >
                  <div
                    className="usage-progress-text"
                  >
                    <strong>
                      0
                    </strong>
                    <div
                      className="usage-progress-remaining"
                    >
                      USAGE_REMAINING
                    </div>
                  </div>
                </CircularProgressbarWithChildren>
              </div>
              <div
                className="usage-check-used"
              >
                3 GB USAGE_USED_OF 3 GB
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        className="important"
      >
        <strong>
          USAGE_LIMIT_EXHAUSTED_TXT
        </strong>
      </p>
      <p>
        <button
          className="button partial"
          id="plan-upgrade-btn"
          onClick={[Function]}
          type="button"
        >
          PLAN_UPGRADE_BTN_TXT
        </button>
      </p>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              Status
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              Email
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  />
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> rendering should render correctly 1`] = `
<React.Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        Do you want to automatically log in the next time?
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <loader
        full={false}
        small={true}
      />
      <div>
        <div
          className="usage-checks-container"
        />
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
          >
            WiFi Login Successful!
          </p>
          <p
            className="status-content"
          >
                    You can now use the internet.
          </p>
          <p
            className="status-content"
          >
                    You may leave this page open in case you want to log out.
          </p>
          <p
            className="status-content"
          >
            <label>
              Status
              :
            </label>
            <span>
              Logged in
            </span>
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="Logout"
            />
          </div>
          <div
            className="links row"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <React.Fragment>
    <form
      action="http://localhost/"
      className="hidden"
      id="cp-login-form"
      method="post"
      target="owisp-auth-iframe"
    >
      <input
        name="auth_user"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="auth_pass"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="zone"
        readOnly={true}
        type="text"
        value="zone_name"
      />
      <input
        name="redirurl"
        readOnly={true}
        type="text"
        value="http://localhost:8080/default/status"
      />
      <input
        name="accept"
        readOnly={true}
        type="text"
        value="accept"
      />
    </form>
  </React.Fragment>
  <React.Fragment>
    <form
      action="http://localhost:8081"
      className="hidden"
      id="cp-logout-form"
      method="post"
      target="owisp-auth-logout-iframe"
    >
      <input
        name="logout_id"
        readOnly={true}
        type="hidden"
        value=""
      />
    </form>
    <iframe
      className="hidden"
      name="owisp-auth-logout-iframe"
      onLoad={[Function]}
      title="owisp-auth-iframe"
    />
  </React.Fragment>
</React.Fragment>
`;

exports[`<Status /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<React.Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    isScrollable={false}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="usage-overview bg row"
    >
      <div
        className="usage-overview-title"
      >
        DAILY_USAGE_OVERVIEW
      </div>
      <p>
        DAILY_USAGE_OVERVIEW_DESCRIPTION
      </p>
      <loader
        full={false}
        small={true}
      />
      <div>
        <div
          className="usage-checks-container"
        />
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
          >
            STATUS_CONTENT
          </p>
          <p
            className="status-content"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              LOGGED_IN
            </span>
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <React.Fragment>
    <form
      action="http://localhost/"
      className="hidden"
      id="cp-login-form"
      method="post"
      target="owisp-auth-iframe"
    >
      <input
        name="auth_user"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="auth_pass"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="zone"
        readOnly={true}
        type="text"
        value="zone_name"
      />
      <input
        name="redirurl"
        readOnly={true}
        type="text"
        value="http://localhost:8080/default/status"
      />
      <input
        name="accept"
        readOnly={true}
        type="text"
        value="accept"
      />
    </form>
  </React.Fragment>
  <React.Fragment>
    <form
      action="http://localhost:8081"
      className="hidden"
      id="cp-logout-form"
      method="post"
      target="owisp-auth-logout-iframe"
    >
      <input
        name="logout_id"
        readOnly={true}
        type="hidden"
        value=""
      />
    </form>
    <iframe
      className="hidden"
      name="owisp-auth-logout-iframe"
      onLoad={[Function]}
      title="owisp-auth-iframe"
    />
  </React.Fragment>
</React.Fragment>
`;
